# mus

./: .gitignore  .stdout.log.swp  CMakeLists.txt  compile.sh  dbg.h  debug_output  juego.c  juego_feb.c  jugador.c  jugador_feb.c  loop.sh  memoria.md  mpi2_worker.c  mus.c  mus.h  mus_feb.c  nohyphenation  out  requisitos.md  test.c
Debug/: test  testmus
mus_sept/: CMakeLists.txt  compile.sh  dbg.h  juego.c  jugador.c  mus.c  mus.h  test.c
mus_sept/docs/: memoria.md  pandoc.sh
